@@ -1,19 +1,16 @@
 -client
--Xms15m
--Xmx45m
+-Xms20m
+-Xmx40m
 -XX:+UnlockExperimentalVMOptions
 -XX:+TieredCompilation
 -XX:+AggressiveOpts
 -XX:+UseAdaptiveSizePolicy
 -Dsun.java2d.noddraw=true
 -Dswing.aatext=true
--XX:MaxHeapFreeRatio=10
--XX:MinHeapFreeRatio=10
 -Dcom.apple.macos.useScreenMenuBar=true
 -Dcom.apple.mrj.application.apple.menu.about.name=Musique
 -Dcom.apple.macos.smallTabs=true
--XX:MaxPermSize=25m
--XX:NewRatio=4
+-XX:MaxPermSize=20m
+-XX:NewRatio=5
+-XX:SurvivorRatio=4
 -XX:+UseAdaptiveGCBoundary
--XX:+UseConcMarkSweepGC
--XX:+CMSIncrementalMode
